[package]
name = "tiny-qr"
version = "0.1.0"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
edition = "2018"
license = "MIT"
description = "Wasm-powered QR code image generator"
repository = "https://github.com/maciejhirsz/tiny-qr"

[dependencies]
wee_alloc = "0.4.4"
base64 = "0.10.1"
wasm-bindgen = "0.2"
pixelate = "0.1"
qrcodegen = "1.4"

[lib]
name = "tiny_qr"
crate-type = ["cdylib", "rlib"]
